text to library and sell and buy text

--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
       <img src="LibraryR.jpg" class="img-circle person" alt="Library">
     </a>
     <div id="demo2" class="collapse">
-      <p>Drummer</p>
-      <p>Loves drummin'</p>
-      <p>Member since 1988</p>
-    </div>
+      <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
+      <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
+      </div>
   </div>
   <div class="col-sm-4">
     <p class="text-center"><strong>Britten Holter</strong></p><br>
@@ -119,7 +118,7 @@
 <div class="bg-1">
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
-    <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!</p>
+    <p class="text-center">It is quick and easy.<br> Remember to add pictures</p>
 
   <br>
   <div class="row text-center">
