--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
   <!--About us-->
   <div class="container text-center">
   <h3>ABOUT</h3>
-  <p><em>We love music!</em></p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-  <br>
+ 
+    <br>
  
  <div class="row">
   <div class="col-sm-4">
@@ -118,7 +117,7 @@
 <div class="bg-1">
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
-    <p class="text-center">It is quick and easy.<br> Remember to add pictures</p>
+    <p class="text-center"><em>It is quick and easy.</em><br> <em>Remember to add pictures.</em></p>
 
   <br>
   <div class="row text-center">
@@ -222,7 +221,7 @@
 <div class="tab-content">
   <div id="home" class="tab-pane fade in active">
     <h2>Britten Holter, Student</h2>
-    <p>This website makes it easier to sell my books instead of putting it on a random page on Facebook!</p>
+    <p><em>This website makes it easier to sell my books instead of putting it on a random page on Facebook!</em></p>
   </div>
   <div id="menu1" class="tab-pane fade">
     <h2>Tanya Bhayani, Student</h2>
