--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   </div>
   <div id="menu1" class="tab-pane fade">
     <h2>Tanya Bhayani, Student</h2>
-    <p>I like the search section so I can see if any books I want are actually on here!</p>
+    <p><em>I like the search section so I can see if any books I want are actually on here!</em></p>
   </div>
   </div>
 </div>
