--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
   <!--About us-->
   <div class="container text-center">
   <h3>ABOUT</h3>
+  <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
+      <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
  
     <br>
  
