--- a/Images/index.html
+++ b/Images/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="Home.css">
-<link rel="stylesheet" type="text/css" href="/images/index.html">
+
 <html lang="en">
 <head>
 
@@ -74,7 +74,8 @@
   <!--About us-->
   <div class="container text-center">
   <h3>ABOUT</h3>
-  <p>Since our launch in 2017, we have successfully been enabling students to sell, buy or swap their textbooks, notes or any stationary related accessories. This platform is free for all students at the University of Aberdeen.</p>
+  <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
+      <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
  
     <br>
  
