Added Tanya's Summary

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <img src="TanyaB3.jpg" class="img-circle person" alt="Tanya">
     </a>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p>Hello! I am Tanya, an undergraduate at the University of Aberdeen</p>
+      <p>I am from England where I completed my A levels and now I am at university studying Psychology.</p>
+      <p>This is my project for the CodeFirst: Girls class!</p>
     </div>
   </div>
   <div class="col-sm-4">
