--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <!--Contact us-->
 <div class="container">
   <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
+  <p class="text-center"><em>We would love to hear from you!</em></p>
   <div class="row test">
     <div class="col-md-4">
       <p>Contact us.</p>
