--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 <!--Ends-->
 
 <!--Feedback-->
+<div class="heading">
 <h3 class="text-center">From the students</h3> 
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#home">Britten</a></li>
@@ -242,6 +243,7 @@
     </style>
   </head>
   <body>
+  <div class="mapgoog">
     <h3>Can't find us?</h3>
     <div id="map"></div>
     <script>
@@ -339,17 +341,19 @@ $(document).ready(function(){
 
 <style>
 /* Add a dark background color to the footer */
-footer {
+#footer {
     background-color: #2d2d30;
     color: #f5f5f5;
-    padding: 40px;
+    padding: 0;
+    height: 100%;
+    width: 100%;
 }
 
-footer a {
+#footer a {
     color: #f5f5f5;
 }
 
-footer a:hover {
+#footer a:hover {
     color: #777;
     text-decoration: none;
 }
@@ -359,7 +363,7 @@ footer a:hover {
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip"
+  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip">
 </footer>
 
 <script>
