--- a/Images/index.html
+++ b/Images/index.html
@@ -127,7 +127,8 @@
          <!--ENDS ABOUT US-->
 
 <!--Buying part-->
-
+<div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
 <div class="bg-1">
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
@@ -195,6 +196,7 @@
 </div>
 
 <!--Contact us-->
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
 <div class="container">
   <h3 class="text-center">Contact</h3>
   <p class="text-center"><em>We love our fans!</em></p>
@@ -358,29 +360,14 @@ $(document).ready(function(){
 
 <!--Navigation bar ends-->
 
-<style>
-/* Add a dark background color to the footer */
-footer {
-    background-color: #2d2d30;
-    color: #f5f5f5;
-    padding: 40px;
-}
-
-footer a {
-    color: #f5f5f5;
-}
-
-footer a:hover {
-    color: #777;
-    text-decoration: none;
-}
-</style>
-
-<footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip"
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
+  <i class="fa fa-instagram w3-hover-text-purple"></i>
+  <i class="fa fa-snapchat w3-hover-text-yellow"></i>
+  <i class="fa fa-pinterest-p w3-hover-text-red"></i>
+  <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+  <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
 <script>
