--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="Home.css">
 
-  <title>University of Aberdeen Startup</title>
+  <title>University of Aberdeen Startup!</title>
   </head>
 <body>
 <!--Carousel starts-->
