--- a/Sellandbuy.html
+++ b/Sellandbuy.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="Home.css">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="stylesheet" type="text/css" href="/images/index.html">
 <html lang="en">
 <head>
 
@@ -13,7 +9,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="Home.css">
 
-  <title>University of Aberdeen Startup</title>
+  <title>University of Aberdeen Startup!</title>
   </head>
 <body>
 <!--Carousel starts-->
@@ -76,47 +72,39 @@
 
   
   <!--About us-->
-   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
   <div class="container text-center">
   <h3>ABOUT</h3>
-  <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
-      <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
+  <p>Since our launch in 2017, we have successfully been enabling students to sell, buy or swap their textbooks, notes or any stationary related accessories. This platform is free for all students at the University of Aberdeen.</p>
  
     <br>
  
  <div class="row">
   <div class="col-sm-4">
-  <div class="w3-third">
     <p class="text-center"><strong>Tanya Bhayani</strong></p><br>
     <a href="#demo" data-toggle="collapse">
       <img src="TanyaB3.jpg" class="img-circle person" alt="Tanya">
     </a>
-    </div>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p>Hello! I am Tanya, an undergraduate at the University of Aberdeen</p>
+      <p>I am from England where I completed my A levels and now I am at university studying Psychology.</p>
+      <p>This is my project for the CodeFirst: Girls class!</p>
     </div>
   </div>
   <div class="col-sm-4">
-  <div class="w3-third">
     <p class="text-center"><strong>UoA Library</strong></p><br>
     <a href="#demo2" data-toggle="collapse">
       <img src="LibraryR.jpg" class="img-circle person" alt="Library">
     </a>
-    </div>
     <div id="demo2" class="collapse">
       <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
       <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
       </div>
   </div>
   <div class="col-sm-4">
-  <div class="w3-third">
     <p class="text-center"><strong>Britten Holter</strong></p><br>
     <a href="#demo3" data-toggle="collapse">
       <img src="Britten3.jpg" class="img-circle person" alt="Britten">
     </a>
-    </div>
     <div id="demo3" class="collapse">
       <p>Hello! My name is Britten Holter and I am an undergraduate student at University of Aberdeen.</p>
       <p>Previously I studied in London at Southbank International School where I finished the International Baccalaureate Program.</p>
@@ -127,8 +115,7 @@
          <!--ENDS ABOUT US-->
 
 <!--Buying part-->
-<div class="w3-black" id="tour">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+
 <div class="bg-1">
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
@@ -196,10 +183,9 @@
 </div>
 
 <!--Contact us-->
-<div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
 <div class="container">
   <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
+  <p class="text-center"><em>We would love to hear from you!</em></p>
   <div class="row test">
     <div class="col-md-4">
       <p>Contact us.</p>
@@ -228,6 +214,7 @@
 <!--Ends-->
 
 <!--Feedback-->
+<div class="heading">
 <h3 class="text-center">From the students</h3> 
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#home">Britten</a></li>
@@ -256,6 +243,7 @@
     </style>
   </head>
   <body>
+  <div class="mapgoog">
     <h3>Can't find us?</h3>
     <div id="map"></div>
     <script>
@@ -320,15 +308,11 @@ $(document).ready(function(){
       <img src="Logo2.jpg">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-   <nav>
-    <ul>
-        <ul class="nav navbar-nav navbar-right">
-        <li><a href="Home.html">HOME</a></li>
-        <li><a href="About.html">ABOUT</a></li>
-        <li><a href="Sellandbuy.html">SELL AND BUY</a></li>
-        <li><a href="Contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#band">ABOUT</a></li>
+        <li><a href="#tour">SELL AND BUY</a></li>
+        <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
@@ -344,16 +328,6 @@ $(document).ready(function(){
     </div>
   </div>
 </nav>
-
-
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">ABOUT</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">SELL AND BUY</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-</div>
-
-
 <!--Scrollspy-->
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -365,14 +339,31 @@ $(document).ready(function(){
 
 <!--Navigation bar ends-->
 
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
-  <i class="fa fa-instagram w3-hover-text-purple"></i>
-  <i class="fa fa-snapchat w3-hover-text-yellow"></i>
-  <i class="fa fa-pinterest-p w3-hover-text-red"></i>
-  <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-  <i class="fa fa-linkedin w3-hover-text-indigo"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<style>
+/* Add a dark background color to the footer */
+#footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+#footer a {
+    color: #f5f5f5;
+}
+
+#footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
+</style>
+
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip">
 </footer>
 
 <script>
