--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   
   <!--About us-->
   <div class="container text-center">
+  <div id="aboutus">
   <h3>ABOUT</h3>
   <p>Since our launch in 2017, we have successfully been enabling students to sell, buy or swap their textbooks, notes or any stationary related accessories. This platform is free for all students at the University of Aberdeen.</p>
  
@@ -184,6 +185,7 @@
 
 <!--Contact us-->
 <div class="container">
+<div id="Contact">
   <h3 class="text-center">Contact</h3>
   <p class="text-center"><em>We would love to hear from you!</em></p>
   <div class="row test">
