--- a/Images/index.html
+++ b/Images/index.html
@@ -7,14 +7,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <html lang="en">
+
 <head>
+    <title>University of Aberdeen Startup</title>
+</head>
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="Home.css">
-
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="Home.css">
-
-  <title>University of Aberdeen Startup</title>
-  </head>
 <body>
 <!--Carousel starts-->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -81,10 +78,8 @@
   <h3>ABOUT</h3>
   <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
       <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
- 
-    <br>
- 
- <div class="row">
+     <br>
+  <div class="row">
   <div class="col-sm-4">
   <div class="w3-third">
     <p class="text-center"><strong>Tanya Bhayani</strong></p><br>
@@ -104,19 +99,19 @@
     <a href="#demo2" data-toggle="collapse">
       <img src="LibraryR.jpg" class="img-circle person" alt="Library">
     </a>
-    </div>
+   </div>
     <div id="demo2" class="collapse">
       <p>Since 2017 we have successfully been enabling students to sell, buy or swap their textbooks, notes or any accessories such as calculators. This platform is free for all students.</p>
       <p>We appreciate any donations and suggestions of how to improve the platform. We are open to new ideas and can take criticism.</p>
       </div>
-  </div>
+   </div>
   <div class="col-sm-4">
   <div class="w3-third">
     <p class="text-center"><strong>Britten Holter</strong></p><br>
     <a href="#demo3" data-toggle="collapse">
       <img src="Britten3.jpg" class="img-circle person" alt="Britten">
     </a>
-    </div>
+   </div>
     <div id="demo3" class="collapse">
       <p>Hello! My name is Britten Holter and I am an undergraduate student at University of Aberdeen.</p>
       <p>Previously I studied in London at Southbank International School where I finished the International Baccalaureate Program.</p>
@@ -133,7 +128,6 @@
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
     <p class="text-center"><em>It is quick and easy.</em><br> <em>Remember to add pictures.</em></p>
-
   <br>
   <div class="row text-center">
   <div class="col-sm-4">
@@ -362,9 +356,10 @@ $(document).ready(function(){
 <div id="contact" class="container">
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="50">
-
 <!--Navigation bar ends-->
 
+
+<!--Footer the bottom of the page-->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
   <i class="fa fa-instagram w3-hover-text-purple"></i>
@@ -374,7 +369,9 @@ $(document).ready(function(){
   <i class="fa fa-linkedin w3-hover-text-indigo"></i>
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
+<!--Ends-->
 
+<!--Scrolling function-->
 <script>
 $(document).ready(function(){
     // Initialize Tooltip
@@ -411,6 +408,5 @@ $(document).ready(function(){
   });
 })
 </script>
-
 </body>
 </html>
