--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 
 <!--Feedback-->
 <div class="heading">
+<div id="fromstudents">
 <h3 class="text-center">From the students</h3> 
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#home">Britten</a></li>
