--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div class="bg-1">
   <div class="container">
     <h3 class="text-center">SELL AND BUY</h3>
-    <p class="text-center"><em>It is quick and easy.</em><br> <em>Remember to add pictures.</em></p>
+    <p class="text-center"><em>It is quick and easy.</em><br> <em></em></p>
 
   <br>
   <div class="row text-center">
