--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!--Buying part-->
 
 <div class="bg-1">
-  <div class="container">
+  <div id="sellbuy">
     <h3 class="text-center">SELL AND BUY</h3>
     <p class="text-center"><em>It is quick and easy.</em><br> <em></em></p>
 
