--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <img src="Britten3.jpg" class="img-circle person" alt="Britten">
     </a>
     <div id="demo3" class="collapse">
-      <p>Hello! My name is Britten Holter and I am an undergraduate student at University of Aberdeen.</p>
+      <p>Hello! My name is Britten Holter Aberdeen and I am an undergraduate student at University of Aberdeen.</p>
       <p>Previously I studied in London at Southbank International School where I finished the International Baccalaureate Program.</p>
       <p>Coding is something that I discovered recently and it has turned out to be very helpful in creating this website as well as pushing me to go out of my comfort zone.</p>
     </div>
