--- a/index.html
+++ b/index.html
@@ -321,31 +321,11 @@ $(document).ready(function(){
 
 <!--Navigation bar ends-->
 
-<style>
-/* Add a dark background color to the footer */
-#footer {
-    background-color: #2d2d30;
-    color: #f5f5f5;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
-
-#footer a {
-    color: #f5f5f5;
-}
-
-#footer a:hover {
-    color: #777;
-    text-decoration: none;
-}
-</style>
-
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip">
+  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
 </footer>
 
 <script>
@@ -354,6 +334,8 @@ $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip(); 
 })
 </script>
+
+
 <script>
 $(document).ready(function(){
   // Initialize Tooltip
