--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
+<head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="Home.css">
-<link rel="stylesheet" type="text/css" href="/images/index.html">
+<!-- <link rel="stylesheet" type="text/css" href="/images/index.html"> -->
 <html lang="en">
-<head>
-
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="Home.css">
 
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="Home.css">
@@ -311,22 +310,22 @@ $(document).ready(function(){
   </div>
 </nav>
 <!--Scrollspy-->
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<!-- <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50"> -->
 
-<div id="about" class="container">
+<!-- <div id="about" class="container">
 <div id="sell and buy" class="container">
-<div id="contact" class="container">
+<div id="contact" class="container"> -->
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="50">
-
+<!-- <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="50"> -->
 <!--Navigation bar ends-->
-
-<footer class="text-center">
+<div id="footer">
+<footer>
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
+  <p><a href="" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
 </footer>
+</div>
 
 <script>
 $(document).ready(function(){
@@ -334,38 +333,6 @@ $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip(); 
 })
 </script>
-
-
-<script>
-$(document).ready(function(){
-  // Initialize Tooltip
-  $('[data-toggle="tooltip"]').tooltip(); 
-  
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-})
 </script>
-
 </body>
 </html>
