--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   <div id="menu1" class="tab-pane fade">
     <h2>Tanya Bhayani, Student</h2>
     <p><em>I like the search section so I can see if any books I want are actually on here!</em></p>
-  </div>
+   </div>
   </div>
 </div>
 
@@ -245,7 +245,7 @@ var marker = new google.maps.Marker({position:myCenter});
 marker.setMap(map);
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0_aeKO-uH3h-mcbOMvIizNHzjsEhDInw&callback=myMap"></script>
 
 <!--making scrolling smoother-->
      <script>
@@ -289,17 +289,13 @@ $(document).ready(function(){
       <img src="Logo2.jpg">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-   <nav>
-    <ul>
         <ul class="nav navbar-nav navbar-right">
         <li><a href="Home.html">HOME</a></li>
         <li><a href="About.html">ABOUT</a></li>
         <li><a href="Sellandbuy.html">SELL AND BUY</a></li>
         <li><a href="Contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
